Fixed issue where text goes out of the box in safari (#5170)

--- a/src/components/SearchOverlay/SearchOverlay.scss
+++ b/src/components/SearchOverlay/SearchOverlay.scss
@@ -30,7 +30,7 @@
     input {
       width: 100%;
       padding: 6px 26px 6px 6px;
-      height: 16px;
+      height: 20px;
       border: none;
       background: transparent;
     }
